[tool.poetry]
name = "chess-board"
version = "0.1.0"
description = ""
authors = ["Dianashafee <diana.shafee1997@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.19.4"
matplotlib = "^3.3.3"
jupyterlab = "^2.2.9"
matplot = "^0.1.9"
lib = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
